--- a/themes/tent/package.json
+++ b/themes/tent/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.23.6",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^4.1.0",
+    "gulp-babel": "^7.0.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^4.0.2",
     "gulp-prettyerror": "^1.2.1",
@@ -14,16 +17,12 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-terser": "^1.1.5",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "gulp-babel": "^7.0.1"
+    "node-sass": "^4.12.0"
   },
   "prettier": {
     "singleQuote": true
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shwilliam/tent.git"
