--- a/themes/tent/package.json
+++ b/themes/tent/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tent",
   "version": "0.1.0",
-  "description": "",
+  "description": "A camping-inspired WP theme and plugin collection",
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.26.7",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.1",
@@ -18,9 +18,6 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-terser": "^1.1.5",
     "node-sass": "^4.12.0"
-  },
-  "prettier": {
-    "singleQuote": true
   },
   "scripts": {
     "start": "gulp"
